Refactor GetGiverSet to return student, instructor, team UUIDs
Co-authored-by: Copilot <copilot@github.com>